welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: reassignment to val
      die1=die1+1
          ^withoutDoubles:8: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
      if (die1==die2 & noDoubles==true & die1=6) {
                                       ^withoutDoubles:9: error: reassignment to val
        die1=1
            ^withoutDoubles:8: error: type mismatch;
 found   : Unit
 required: Int
      if (die1==die2 & noDoubles==true & die1=6) {
      ^